IE11 layout bug

--- a/css/layout.css
+++ b/css/layout.css
@@ -7,14 +7,21 @@ body { /*Note: In build, the CSS selector should be the <body> element*/
 	margin: 0;
 	padding: 0;
 	position: relative;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 	min-height: 100vh;
-	flex-direction: column;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
 	overflow-x: hidden;
 }
 
 .main-wrapper {
-	flex: 1;
+	-webkit-box-flex: 1;
+	    -ms-flex: 1;
+	        flex: 1;
 	margin: 0 auto;
     padding-left: 30px;
     padding-right: 30px;
@@ -23,7 +30,9 @@ body { /*Note: In build, the CSS selector should be the <body> element*/
 
 @media all and (min-width: 1024px) {
 	.main-wrapper {
-		flex: 1;
+		-webkit-box-flex: 1;
+		    -ms-flex: 1;
+		        flex: 1;
 		margin: 0 auto;
 	    padding-left: 0;
 	    padding-right: 0;
